// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckLogin /> should not render CheckLogin if authentication is false 1`] = `
<div
  className="error"
>
  Authentication unsuccessful
</div>
`;

exports[`<CheckLogin /> should render CheckLogin if authentication is true 1`] = `
<div
  className="auth"
>
  Authentication successful
</div>
`;

exports[`<CheckLogin /> should render nothing if CheckLogin if authentication is false and error component is not provided 1`] = `null`;
